# filler

./: .gitignore  CMakeLists.txt  Makefile  README  ckeck_input.c  del_matrix.c  filler.h  pars_data.c  put_piece.c  todo  vector.c  wave_matrix.c
libft/: Makefile  ft_strjoin.c  ftall.h  get_next_line.c  get_next_line.h
libft/ft_printf/: Makefile  ft_printf.h
libft/libft/: Makefile  ft_putstr.c  ft_putstr_fd.c
